--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@
 body{
   background-image: url("assets/10690486_4477486.png");
   background-size: cover;
+  align-items: center;
+	height: 100vh;
+	justify-content: center;
 }
 
 .header{
@@ -174,12 +177,21 @@ span{
   padding: 20px;
 }
 
-.card {
+.img1{
+  position: relative;
+  overflow: auto;
+  width: 625px;
+  left: 12%;
+  top: 5%;
+}
+
+.card-home {
   width: 800px;
   height: 400px;
   transition: all 0.2s;
   position: relative;
   cursor: pointer;
+  z-index: -1;
 }
 
 .card-inner {
@@ -191,7 +203,7 @@ span{
   border-radius: 8px;
 }
 
-.card:hover {
+.card-home:hover {
   transform: scale(1.04) rotate(1deg);
 }
 
@@ -215,15 +227,6 @@ span{
   animation-name: move-down1;
 }
 
-.img1{
-  position: relative;
-  overflow: auto;
-  width: 625px;
-  left: 12%;
-  top: 5%;
-}
-
-
 @keyframes move-up6 {
   to {
     transform: translateY(-10px);
@@ -235,3 +238,182 @@ span{
     transform: translateY(10px);
   }
 }
+
+/*About Section Styles*/
+.about{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+  width: 100%;
+  height: 700px;
+  background-color: #9aaf9b;
+  border-radius: 5px;
+}
+
+.card1 {
+  position: relative;
+  width: 800px;
+  height: 500px;
+  background: linear-gradient(-45deg,#566246 0%, #a4c2a5 100% );
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.card1 svg {
+  object-fit: cover;
+  fill: #333;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+.card1:hover {
+  transform: rotate(-5deg) scale(1.1);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.card1:hover .card__content {
+  transform: translate(-50%, -50%) rotate(0deg);
+  opacity: 1;
+}
+
+.card1:hover svg {
+  scale: 0;
+  transform: rotate(-45deg);
+}
+
+.card2 {
+  position: relative;
+  width: 800px;
+  height: 500px;
+  background: linear-gradient(-45deg,#566246 0%, #a4c2a5 100% );
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.card2 img {
+  object-fit: cover;
+  fill: #333;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+.card2:hover {
+  transform: rotate(-5deg) scale(1.1);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.card__content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: #fff;
+  opacity: 0;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+.card2:hover .card__content {
+  transform: translate(-50%, -50%) rotate(0deg);
+  opacity: 1;
+}
+
+.card__title {
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 24px;
+  color: #333;
+  font-weight: 700;
+  font-family: "Coolvetica", sans-serif;
+  font-size: 2rem;
+}
+
+.card__description {
+  font-size: 1.5rem;
+  color: #777;
+  line-height: 1.4;
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-top: 25px;
+  margin-bottom: 10px;
+  text-align: justify;
+}
+
+.card2:hover img {
+  scale: 0;
+  transform: rotate(45deg);
+}
+
+/*Slider Style*/
+@mixin white-gradient {
+	background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
+}
+
+@keyframes scroll {
+	0% { transform: translateX(0); }
+	100% { transform: translateX(calc(-250px * 7))}
+}
+
+.container {
+  display: inline-flex;
+  overflow: hidden;
+  padding: 10px;
+  width: 100%;
+  height: 150px;
+  background-color: white;
+  margin-top: 50px;
+}
+
+	&::before,
+	&::after {
+		@include white-gradient;
+		content: "";
+		height: 100px;
+		position: absolute;
+		width: 200px;
+		z-index: 2;
+	}
+	
+	&::after {
+		right: 0;
+		top: 0;
+		transform: rotateZ(180deg);
+	}
+
+	&::before {
+		left: 0;
+		top: 0;
+	}
+	
+	.item{
+    animation: scroll 30s linear infinite;
+		padding: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+	}
+	
+	.container .item img {
+		width: auto;
+    height: 90px;
+	}
