--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ span{
   transform: rotate(45deg);
 }
 
-/*Slider Style*/
+/*Partners - Slider Style*/
 @mixin white-gradient {
 	background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
 }
