--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body{
   top: 0;
   box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(20px);
+  z-index: 2;
 }
 
 .header .logo{
@@ -69,8 +70,10 @@ body{
   transition: .5s;
 }
 
-.header .navbar ul li a:hover{
+/*Indicador*/
+.navbar ul li a:hover, .navbar ul li a:active{
   color: white;
+  transform: scale(1.01);
 }
 
 
@@ -186,12 +189,14 @@ span{
 }
 
 .card-home {
-  width: 800px;
+  width: 850px;
   height: 400px;
   transition: all 0.2s;
   position: relative;
   cursor: pointer;
   z-index: -1;
+  margin-left: 20px;
+  margin-right: -20px;
 }
 
 .card-inner {
@@ -245,10 +250,32 @@ span{
   justify-content: center;
   align-items: center;
   margin-top: 100px;
-  width: 100%;
+  margin-left: 100px;
+  width: 90%;
   height: 700px;
-  background-color: #9aaf9b;
+  background-color: #b1c5b2;
   border-radius: 5px;
+  padding-left: 30px;
+  padding-right: 25px;
+  box-shadow:  0 0 15px 5px rgba(0,0,0,0.2);
+}
+
+.title{
+  font-family: "Coolvetica", sans-serif;
+  font-weight: bolder;
+  font-size: 1.7rem;
+  background-color: #7a8768;
+  color: var(--bg-color);
+  padding: 20px;
+  margin-top: -700px;
+  margin-left: 50px;
+  border-radius: 20px 5px 20px 5px; 
+  z-index: 0;
+  transition: .3s ease-in;
+}
+
+.title:hover{
+  transform: scale(1.01) rotate(-5deg);
 }
 
 .card1 {
@@ -262,7 +289,7 @@ span{
   justify-content: center;
   overflow: hidden;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
-  margin-left: 50px;
+  margin-left: -210px;
   margin-right: 50px;
 }
 
@@ -298,7 +325,7 @@ span{
   justify-content: center;
   overflow: hidden;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
-  margin-left: 50px;
+  margin-left: 20px;
   margin-right: 50px;
 }
 
@@ -361,13 +388,9 @@ span{
 }
 
 /*Partners - Slider Style*/
-@mixin white-gradient {
-	background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
-}
-
 @keyframes scroll {
 	0% { transform: translateX(0); }
-	100% { transform: translateX(calc(-250px * 7))}
+	100% { transform: translateX(calc(-150px * 7))}
 }
 
 .container {
@@ -377,12 +400,10 @@ span{
   width: 100%;
   height: 150px;
   background-color: white;
-  margin-top: 50px;
 }
 
 	&::before,
 	&::after {
-		@include white-gradient;
 		content: "";
 		height: 100px;
 		position: absolute;
@@ -417,3 +438,136 @@ span{
 		width: auto;
     height: 90px;
 	}
+
+  /*Services Styles*/
+  .services{
+    display: inline-flexbox;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 700px;
+    margin-bottom: 20px;
+  }
+
+  .services-title{
+    font-family: "Coolvetica", sans-serif;
+    font-size: 1.7rem;
+    background-color: #a4c2a5;
+    border-radius: 5px 20px 5px 20px;
+    padding: 10px 20px;
+    color: white;
+    box-shadow: 19px 17px 35px -11px rgba(0, 0, 0, 0.60);
+    margin-top: 100px;
+    width: 20%;
+    margin-left: 46%;
+  }
+
+  .products{
+   display: inline-flex;
+   width: 174vh;
+   height: 500px;
+   margin-top: 50px;
+   margin-left: 100px;
+   color: #4a4a48;
+  }
+
+  /*Products styles*/
+  .card-1 {
+    height: auto;
+    width: 350px;
+    position: relative;
+    transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+    border-radius: 16px;
+    box-shadow: 0 0 20px 8px #d0d0d0;
+    overflow: hidden;
+  }
+  
+   /*Image*/
+  .cnew-image {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+    background: linear-gradient(to top, #566246,#9aaf9b);
+  }
+  
+  /*Description */
+  .cnew-description {
+    line-height: 2;
+    display: flex;
+    position: absolute;
+    gap: .5em;
+    flex-direction: column;
+    background-color: #f5f5f5;
+    color: #212121;
+    height: 50%;
+    bottom: 0;
+    border-radius: 16px;
+    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+    padding: 1rem;
+  }
+  
+  /*Text*/
+  .ctext-title {
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
+  
+  .ctext-body {
+    font-size: 1rem;
+    line-height: 130%;
+  }
+  
+  /* Hover states */
+  .card-1:hover .cnew-description {
+    transform: translateY(100%);
+  }
+  
+  .card-2 {
+    height: auto;
+    width: 350px;
+    position: relative;
+    transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+    border-radius: 16px;
+    box-shadow: 0 0 20px 8px #d0d0d0;
+    overflow: hidden;
+    margin-left: 87px;
+  }
+  
+  .card-2:hover .cnew-description {
+    transform: translateY(100%);
+  }
+
+  .card-3 {
+    height: auto;
+    width: 350px;
+    position: relative;
+    transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+    border-radius: 16px;
+    box-shadow: 0 0 20px 8px #d0d0d0;
+    overflow: hidden;
+    margin-left: 87px;
+  }
+  
+  .card-3:hover .cnew-description {
+    transform: translateY(100%);
+  }
+
+  
+  .card-4 {
+    height: auto;
+    width: 350px;
+    position: relative;
+    transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+    border-radius: 16px;
+    box-shadow: 0 0 20px 8px #d0d0d0;
+    overflow: hidden;
+    margin-left: 87px;
+  }
+  
+  .card-4:hover .cnew-description {
+    transform: translateY(100%);
+  }
+  
+  
+  
