--- a/style.css
+++ b/style.css
@@ -371,9 +371,8 @@ span{
   font-size: 2rem;
 }
 
-.card__description {
+.card__description1{
   font-size: 1.5rem;
-  color: #777;
   line-height: 1.4;
   margin-right: 10px;
   margin-left: 10px;
@@ -385,6 +384,15 @@ span{
 .card2:hover img {
   scale: 0;
   transform: rotate(45deg);
+}
+
+.card2 ul li{
+  font-size: 1.3rem;
+  margin-left: 30px;
+  line-height: 1.4;
+  margin-right: 10px;
+  text-align: justify;
+  margin-top: 25px;
 }
 
 /*Partners - Slider Style*/
